--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "validator": "^13.12.0"
