--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "validator": "^13.12.0"
